<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="edu.orangecoastcollege.cs273.occofficehours.InstructorDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="TextView"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="TextView"/>

        <TextView
            android:id="@+id/departmentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="TextView"/>

        <TextView
            android:id="@+id/officeRoomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="TextView"/>

        <TextView
            android:id="@+id/officeHoursTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/office_hours_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mondayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/monday_text"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/mondayHoursTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>

            <Button
                android:id="@+id/mondayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/make_reservation_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tuesdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/tuesday_text"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tuesdayHoursTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>

            <Button
                android:id="@+id/tuesdayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/make_reservation_button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wednesdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/wednesday_text"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/wednesdayHoursTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
            <Button
                android:id="@+id/wednesdayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/make_reservation_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/thursdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/thursday_text"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/thursdayHoursTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>

            <Button
                android:id="@+id/thursdayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/make_reservation_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fridayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/friday_text"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fridayHoursTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>

            <Button
                android:id="@+id/fridayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/make_reservation_button"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
